Fixes failing e2e tests. Cleans up some whitespace.

--- a/src/material-theme.scss
+++ b/src/material-theme.scss
@@ -13,7 +13,7 @@
 
   body {
     margin: 0;
-    padding-top: 64px;
+    padding-top: $header-height;
   }
 
   mat-radio-button, .mat-checkbox {
